syntax = "proto3";

import "base.proto";

service LobbyService {
    rpc ListenUserState(Empty) returns (stream UserState);
    rpc ListenStart(UserState) returns (stream StartState);
}

message StartState {
    bool Start = 1;
    ID Token = 2;
}

message UserState {
    string ID = 1;
    bool Connected = 2;
    int32 Team = 3;
}